--- a/styles/dice-with-mice.css
+++ b/styles/dice-with-mice.css
@@ -1,14 +1,5 @@
 .dwm-roll-resolver {
 
-    /*& .form-footer {
-        display: none;
-    }*/
-
-    /*& fieldset.dwm-results {
-        display: flex;
-        gap: 8px;
-    }*/
-
     & fieldset[data-method="dwmResolver"] {
         display: none;
     }
@@ -16,20 +7,19 @@
 }
 
 .dwm-tracker {
+    min-width: auto;
+
     & .window-content {
         padding: 0.5rem;
 
         & fieldset.dwm-results {
             display: flex;
-            /*gap: 8px;*/
             padding: 0 0.625em 0;
             margin: 0;
 
             & .dwm-result {
                 width: 60px;
                 height: 60px;
-                /*border: 1px solid #aaa;
-                border-radius: 8px;*/
                 position: relative;
 
                 &.rerolled::before {
