Cancel tracked roll when user disconnects, hide Submit button when not necessary, some localization

--- a/templates/roll-resolver-form.hbs
+++ b/templates/roll-resolver-form.hbs
@@ -16,7 +16,7 @@
         {{/each}}
     </fieldset>
     {{/each}}
-    <footer class="form-footer">
+    <footer class="form-footer{{#if allThrowable}} hidden{{/if}}">
         <button type="submit">
             <i class="fas fa-check"></i>
             {{ localize "DICE.SubmitRollPl" }}
