--- a/templates/roll-resolver-header.hbs
+++ b/templates/roll-resolver-header.hbs
@@ -1,3 +1,3 @@
 <section class="flexcol standard-form">
-    <button type="button" class="roll" data-action="spawnDice"{{#if rollDisabled}}disabled{{/if}}>Roll</button>
+    <button type="button" class="roll" data-action="spawnDice"{{#if rollDisabled}}disabled{{/if}}>{{ localize "DWM.APPLICATION.DWMResolver.StartRoll" }}</button>
 </section>
